# mfq3-revival

./: .gitignore  CREDITS.md  README.md
Military Forces/source/code/: CMakeLists.txt
Military Forces/source/code/cgame/: cg_consolecmds.c  cg_draw.c  cg_drawnewhud.c  cg_drawtools.c  cg_dronecam.c  cg_helo.c  cg_local.h  cg_lqm.c  cg_main.c  cg_miscvehicle.c  cg_missioncomplete.c  cg_players.c  cg_servercmds.c  cg_util.c  cg_vehicle.c  cg_vehicledraw.c  cg_view.c
Military Forces/source/code/client/: cl_input.c  cl_main.c  client.h  snd_dma.c
Military Forces/source/code/game/: bg_boatmove.c  bg_helomove.c  bg_local.h  bg_lqmmove.c  bg_mfq3util.c  bg_planemove.c  bg_pmove.c  bg_public.h  bg_vehicledata.c  g_active.c  g_bot.h  g_bot_ai.c  g_bot_air.c  g_bot_boat.c  g_bot_cmds.c  g_bot_ground.c  g_bot_helo.c  g_bot_infantry.c  g_bot_waypoint.c  g_client.c  g_cmds.c  g_combat.c  g_groundinstallation.c  g_helo.cpp  g_level.cpp  g_local.h  g_main.c  g_mfq3ents.h  g_miscvehicle.c  g_missile.c  g_missions.c  g_plane.c  g_plane.cpp  g_svcmds.c  g_team.c  g_vehicle.cpp  g_weapon.c  mf_client.c  q_shared.h
Military Forces/source/code/renderer/: tr_main.c
Military Forces/source/code/server/: sv_bot.c  sv_world.c
Military Forces/source/code/ui/: menudef.h  ui_local.h  ui_main.c  ui_util.c
_incoming/: analyze_obj.py  composite_showcase.py  cull_test.py  extract_glb_tex.py  fix_md3_surfname.py  gear_rig.py  gen_parachute.py  gen_shadow.py  glb2obj.py  inject_md3_tag.py  make_gear_gif.py  make_vtol_gif.py  obj2md3.ps1  preprocess_gear.py  render_groups.py  render_md3.py  render_obj.py  render_sarge.py  render_uv.py  set_md3_tag.py  vulcan_doorgroups.txt  vulcan_gearlegs.txt
_incoming/coldwarpk3/ui/: createserver.menu
_incoming/sarge2/: build_sarge2.py  verify_sarge2.py
assets/: lqm_sarge.pk3
docs/: 01-build-and-run.md  02-ioq3-port.md  03-infantry-lqm.md  04-bots.md  05-singleplayer-missions.md  06-roadmap.md  07-helos.md  README.md
docs/linkedin/: fable-lqm-article.html
docs/showcase/: README.md
missions/: README.md
missions/training/: mission1.mis  mission1.mission  mission2.mis  mission2.mission  mission3.mis  mission3.mission  mission4.mis  mission4.mission  mission5.mis  mission6.mis  mission7.mis  mission8.mis  takeoff.mis
play/mfdata/: autoexec.cfg  zz_coldwar.pk3  zz_lqmfix.pk3
play/mfdata/_waypoint_src/models/mapobjects/gate/: gate.md3
play/mfdata/_waypoint_src/models/mapobjects/waypoints/: buoy.md3  flag.md3
play/mfdata/_waypoint_src/scripts/: buoy.shader  flag.shader  gate.shader
play/mfdata/gfx/shadows/: c5Shadow.tga  f35Shadow.tga  reaperShadow.tga  sr71Shadow.tga  vulcanShadow.tga
play/mfdata/missions/training/: coldwar.mis  lqm_walk.mis  sr71_runway.mis  vulcan_runway.mis
play/mfdata/scripts/: newvehicleshadows.shader
tools/: build_waypoint_pk3.py  fix_f16_pylons.py  glb_to_md3.py
tools/warsub_src/: warsub.md3  warsub.tga
